--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 
 libs/juce-2.0/audio-devices         - check if JUCE_WASAPI is valid on Windows XP
 libs/juce-2.0/audio-processors_full - fails to build on linux
+
+s/ThePilgrim2/ThePilgrim
